--- a/css/styles.css
+++ b/css/styles.css
@@ -841,3 +841,120 @@ footer .icon-networks {
        
 }
 
+.form{
+     width: 530px;
+     height: 580px;
+     margin-left: 40px;
+     margin-right: 40px ;
+     margin-top: 40px;
+     margin-bottom: 40px;
+     
+    
+}
+
+.form-tittle{
+    
+     margin-bottom: 12px;
+     font-weight: 700;
+     font-size: 20px;
+     line-height: 1.15;
+     text-align: center;
+     letter-spacing: 0.03em;
+     color: var(--main-text-color);
+}
+
+.form-field{
+     left: 0;
+     display: flex;
+     flex-direction: column;
+     height: 58px;
+     margin-bottom: 10px;
+    
+      
+}
+
+.form-label{
+     margin-bottom: 4px;
+     font-size: 12px;
+     line-height: 1.16;
+     letter-spacing: 0.01em;
+     color: var(--additional-text-color);
+}
+
+
+.form-input{
+     height: 40px;
+     margin: 0;
+     padding: 0;
+     border: 1px solid rgba(33, 33, 33, 0.2);
+     border-radius: 4px;
+}
+  
+.comments{
+     resize: none;
+     height: 120px;
+     width: 100%;
+     border: 1px solid rgba(33, 33, 33, 0.2);
+     border-radius: 4px;
+     padding: 12px 16px;
+}
+
+.comments::placeholder {
+     list-style: none;
+     font-size: 12px;
+     line-height: 1.16;
+     letter-spacing: 0.01em;
+
+     color: rgba(117, 117, 117, 0.5);
+}
+
+.form-checkbox{
+     margin-top: 20px;
+     margin-bottom: 30px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+}
+.form-checkbox input[type="checkbox"]{
+}
+.form-checkbox label{
+     margin-left:8px ;
+     font-style: normal;
+     font-weight: 400;
+     font-size: 14px;
+     line-height: 1,71;
+     letter-spacing: 0.03em;
+     
+     color: #757575;
+}
+
+.button-form {
+     display: flex;
+     padding: 10px 52px; 
+     margin-left: auto;
+     margin-right: auto;
+     font-family: inherit;
+     color: var(--selection-text-color);
+     background-color:var(--button-main-hero-color);
+     font-weight: 700;
+     font-size: 16px;
+     line-height: 1.88;   
+     align-items: center;
+     text-align: center;
+     letter-spacing: 0.06em;
+     cursor: pointer;
+     min-width: 200px;
+     border: none;
+     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+     border-radius: 4px;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-form:hover,
+.button-form:focus {
+     background-color: var(--button-main-hero-color);
+}
+
+.button-form:active {
+     background-color: var(--button-active-hero-color);
+}
