--- a/css/styles.css
+++ b/css/styles.css
@@ -648,13 +648,13 @@ p {
 .project-link:hover,
 .project-link:focus {
      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-          0px 4px 4px rgba(0, 0, 0, 0.06),
-          1px 4px 6px rgba(0, 0, 0, 0.16);
+     0px 4px 4px rgba(0, 0, 0, 0.06),
+     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .project-thumb {
-      position: relative;
-      overflow: hidden;
+     position: relative;
+     overflow: hidden;
 }
 
 .project-overlay{
@@ -837,23 +837,25 @@ footer .icon-networks {
      position: absolute;
      top: 50%;
      left: 50%;
-     transform: translate(-50%, -50%);
-       
+     transform: translate(-50%, -50%);  
+     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form{
-     width: 530px;
-     height: 580px;
+.button-modal:hover .modal-icon,
+.button-modal:focus .modal-icon{
+     fill: var(--accent-color);  
+}
+
+.form {
+     width: 448px;
+     /* height: 580px; */
      margin-left: 40px;
      margin-right: 40px ;
      margin-top: 40px;
      margin-bottom: 40px;
-     
-    
 }
 
 .form-tittle{
-    
      margin-bottom: 12px;
      font-weight: 700;
      font-size: 20px;
@@ -863,17 +865,17 @@ footer .icon-networks {
      color: var(--main-text-color);
 }
 
-.form-field{
+.form-field {
+     position: relative;
      left: 0;
      display: flex;
      flex-direction: column;
      height: 58px;
-     margin-bottom: 10px;
-    
-      
+     margin-bottom: 10px;  
 }
 
 .form-label{
+     height: 14px;
      margin-bottom: 4px;
      font-size: 12px;
      line-height: 1.16;
@@ -881,15 +883,37 @@ footer .icon-networks {
      color: var(--additional-text-color);
 }
 
-
 .form-input{
-     height: 40px;
+     height: 40px; 
      margin: 0;
-     padding: 0;
+     padding-left: 40px;
      border: 1px solid rgba(33, 33, 33, 0.2);
      border-radius: 4px;
+     cursor: pointer;
+     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-  
+
+.form-icon{
+     position: absolute;
+     width: 18px;
+     height: 18px;
+     top: 50%; 
+     left: 12px;
+     fill: var(--main-text-color);
+     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:hover,
+.form-input:focus{
+     border-color: var(--accent-color);
+     outline:none;
+}
+
+.form-input:hover +.form-icon,
+.form-input:focus +.form-icon{
+     border-color: var(--accent-color);
+     fill:var(--accent-color);
+}
+
 .comments{
      resize: none;
      height: 120px;
@@ -897,6 +921,13 @@ footer .icon-networks {
      border: 1px solid rgba(33, 33, 33, 0.2);
      border-radius: 4px;
      padding: 12px 16px;
+     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.comments:hover,
+.comments:focus {
+     border-color: var(--accent-color);
+     outline: none;
 }
 
 .comments::placeholder {
@@ -906,17 +937,47 @@ footer .icon-networks {
      letter-spacing: 0.01em;
 
      color: rgba(117, 117, 117, 0.5);
+     
 }
 
-.form-checkbox{
+.form-checkbox {
      margin-top: 20px;
      margin-bottom: 30px;
      display: flex;
      align-items: center;
-     justify-content: center;
+     justify-content: center;         
 }
-.form-checkbox input[type="checkbox"]{
+
+.checkbox {
+     -webkit-appearance: none;
+     -moz-appearance: none;
+     appearance: none;
+     position: absolute;
+     display: flex;
+    
 }
+
+.checkbox-icon {
+     width: 16px;
+     height: 15px;
+     border: #212121 solid 2px;
+     border-radius: 2px;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     
+}
+
+.checkbox:checked +.checkbox-icon{
+     background-color: var(--accent-color);
+     border-radius: 2px;
+     border-color: var(--accent-color);
+}
+
+label a {
+     color: var(--accent-color);
+     text-decoration-skip-ink: none;
+}
+      
+
 .form-checkbox label{
      margin-left:8px ;
      font-style: normal;
@@ -925,7 +986,7 @@ footer .icon-networks {
      line-height: 1,71;
      letter-spacing: 0.03em;
      
-     color: #757575;
+     color: var(--additional-text-color)
 }
 
 .button-form {
