--- a/css/styles.css
+++ b/css/styles.css
@@ -1019,3 +1019,67 @@ label a {
 .button-form:active {
      background-color: var(--button-active-hero-color);
 }
+
+.subscribe{
+     width: 570px;
+     margin-left: auto;
+}
+
+
+.subscribe-text{
+     margin-bottom: 20px;
+     font-weight: 700;
+     font-style: normal;
+     font-size: 14px;
+     line-height: 1.14;
+     letter-spacing: 0.03em;
+     text-transform: uppercase;
+     color: var(--selection-text-color);
+}
+
+.subscribe-input {
+     width: 358px; 
+     height: 50px;
+     margin-right: 12px;
+     padding: 16px;
+     background-color: var(--hero-background-color);
+     border: 1px solid rgba(255, 255, 255, 0.3);
+     border-radius: 4px;
+          
+}
+
+.subscribe-button {
+     position: relative;
+     font-family: inherit;
+     font-style: normal;
+     font-weight: 700;
+     font-size: 16px;
+     line-height: 1.88;
+     text-align: center;
+     letter-spacing: 0.06em;
+     color:var(--selection-text-color);
+     background-color: var(--accent-color);
+     cursor: pointer;
+     max-width: 200px;
+     padding: 10px 62px 10px 28px;
+     border: none;
+     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+     border-radius: 4px;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-icon{
+     position: absolute;
+     top: 25%;
+     right: 22px;
+     width: 24px;
+     height: 24px
+}
+
+.subscribe-button:hover,
+.subscribe-button:focus {
+     background-color: var(--button-main-hero-color);
+}
+
+.subscribe-button:active {
+     background-color: var(--button-active-hero-color);
