--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,7 @@ p {
      top: 0;
      left:0;
      background-color: var(--main-background-color);
+     z-index:1;
 }
 
 .main-nav {
@@ -778,6 +779,7 @@ footer .icon-networks {
 
 .backdrop {
      position: fixed;
+     z-index: 2;
      top:0;
      left:0;
      width:100%;
@@ -802,9 +804,9 @@ footer .icon-networks {
      position: absolute;
      top:50%;
      left: 50%;
-     min-width: 530px;
-     min-height: 580px;
-
+     min-width: 528px;
+     min-height: 581px;
+     padding:40px;
      background: var(--main-background-color);
      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
       0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -846,14 +848,6 @@ footer .icon-networks {
      fill: var(--accent-color);  
 }
 
-.form {
-     width: 448px;
-     /* height: 580px; */
-     margin-left: 40px;
-     margin-right: 40px ;
-     margin-top: 40px;
-     margin-bottom: 40px;
-}
 
 .form-tittle{
      margin-bottom: 12px;
@@ -875,6 +869,7 @@ footer .icon-networks {
 }
 
 .form-label{
+     display: block;
      height: 14px;
      margin-bottom: 4px;
      font-size: 12px;
@@ -915,6 +910,7 @@ footer .icon-networks {
 }
 
 .comments{
+     display: block;
      resize: none;
      height: 120px;
      width: 100%;
@@ -945,25 +941,36 @@ footer .icon-networks {
      margin-bottom: 30px;
      display: flex;
      align-items: center;
-     justify-content: center;         
+     justify-content: center; 
+            
+}
+
+.checkbox-lable {
+     position: relative;
+     font-style: normal;
+     font-weight: 400;
+     font-size: 14px;
+     line-height: 1, 71;
+     letter-spacing: 0.03em;
+     padding-left: 20px;
+
+     color: var(--additional-text-color)
 }
 
 .checkbox {
      -webkit-appearance: none;
      -moz-appearance: none;
-     appearance: none;
-     position: absolute;
-     display: flex;
-    
+     appearance: none;  
 }
 
 .checkbox-icon {
+     position: absolute;
+     left:0;
      width: 16px;
      height: 15px;
      border: #212121 solid 2px;
      border-radius: 2px;
      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-     
 }
 
 .checkbox:checked +.checkbox-icon{
@@ -977,18 +984,6 @@ label a {
      text-decoration-skip-ink: none;
 }
       
-
-.form-checkbox label{
-     margin-left:8px ;
-     font-style: normal;
-     font-weight: 400;
-     font-size: 14px;
-     line-height: 1,71;
-     letter-spacing: 0.03em;
-     
-     color: var(--additional-text-color)
-}
-
 .button-form {
      display: flex;
      padding: 10px 52px; 
@@ -1022,7 +1017,12 @@ label a {
 
 .subscribe{
      width: 570px;
-     margin-left: auto;
+     margin: 0px 0px 0px auto;
+}
+
+.subscribe-form{
+     display: flex;
+     align-items: center;
 }
 
 
@@ -1044,8 +1044,8 @@ label a {
      padding: 16px;
      background-color: var(--hero-background-color);
      border: 1px solid rgba(255, 255, 255, 0.3);
-     border-radius: 4px;
-          
+     border-radius: 4px;    
+     color: var(--main-background-color);
 }
 
 .subscribe-button {
@@ -1060,7 +1060,7 @@ label a {
      color:var(--selection-text-color);
      background-color: var(--accent-color);
      cursor: pointer;
-     max-width: 200px;
+     width: 200px;
      padding: 10px 62px 10px 28px;
      border: none;
      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
